# lgtm-lint

./: .gitignore  README.md  install.sh  legacy_install.sh  lgtm_lint.py  pyproject.toml
.github/workflows/: lint-and-test.yml
lgtm_lint/: __main__.py
src/lgtm_lint/: __main__.py
